--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="64dp"
         android:elevation="8dp"
-        android:background="#FFFFFFFF"
+        android:background="@drawable/shape_corner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
