--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,67 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="88dp"
     android:background="@drawable/shape_corner">
 
     <TextView
         android:id="@+id/time_hour"
         android:layout_width="100dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
         android:text="22:35"
         android:textColor="#FF000000"
-        android:textSize="28sp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/time_date"
         android:layout_width="200dp"
-        android:layout_height="48dp"
+        android:layout_height="24dp"
         android:gravity="center"
         android:text="2021/10/8"
         android:textColor="#FF000000"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/time_hour"
+        app:layout_constraintTop_toTopOf="@+id/time_hour" />
+
+    <TextView
+        android:id="@+id/note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLength="20"
+        android:maxLines="1"
+        android:minLines="1"
+        android:text="提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_hour" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="240dp"
-        android:layout_height="120dp"
-        app:cardBackgroundColor="#FFFFFFFF"
-        app:cardCornerRadius="6dp"
-        app:contentPadding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time_date">
-
-        <TextView
-            android:id="@+id/note"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:text="提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒"
-            android:textSize="16sp" />
-
-    </androidx.cardview.widget.CardView>
 
     <RadioButton
         android:id="@+id/finished"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="已完成"
-        android:layoutDirection="rtl"
         android:textColor="#FF000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
