--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,44 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
-    android:background="@drawable/shape_corner">
+    android:background="@drawable/rectangle_corner"
+    android:elevation="1dp"
+    android:layout_height="88dp">
 
     <TextView
-        android:id="@+id/time_hour"
-        android:layout_width="100dp"
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="22:35"
-        android:textColor="#FF000000"
+        android:text="22:35    2021/10/8"
+        android:textColor="#C1C1C1"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/time_date"
-        android:layout_width="200dp"
-        android:layout_height="24dp"
-        android:gravity="center"
-        android:text="2021/10/8"
-        android:textColor="#FF000000"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/time_hour"
-        app:layout_constraintTop_toTopOf="@+id/time_hour" />
-
-    <TextView
         android:id="@+id/note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:ellipsize="end"
         android:maxLength="20"
         android:maxLines="1"
         android:minLines="1"
         android:text="提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒"
+        android:textColor="#FF0000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time_hour" />
+        app:layout_constraintTop_toBottomOf="@+id/time" />
 
 
     <RadioButton
