--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -15,7 +15,6 @@
         android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="22:35    2021/10/8"
-        android:textColor="#C1C1C1"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +29,6 @@
         android:maxLines="1"
         android:minLines="1"
         android:text="提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒事项提醒"
-        android:textColor="#FF0000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -40,7 +38,13 @@
         android:id="@+id/finished"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FF000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/note"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Switch
+        android:layout_width="56dp"
+        android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
