--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Schedule"
+            android:layout_gravity="center"
             android:textSize="28sp"
             android:gravity="center"/>
 
@@ -46,33 +47,82 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" >
 
-        <ImageButton
-            android:id="@+id/add_label"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/image_label"
-            android:layout_gravity="left"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp">
 
-        <ImageButton
-            android:id="@+id/my_schedule"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:background="@drawable/image_schedule_selected"
-            android:layout_gravity="center"/>
+            <ImageButton
+                android:id="@+id/add_label"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="left"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/image_label"
+                app:layout_constraintEnd_toStartOf="@+id/my_schedule"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/add_plan"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="16dp"
-            android:scaleType="centerInside"
-            android:background="@drawable/image_add"
-            android:layout_gravity="right"/>
+            <TextView
+                android:id="@+id/text_label"
+                android:layout_width="32dp"
+                android:layout_height="12dp"
+                android:gravity="center"
+                android:text="label"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/add_label"
+                app:layout_constraintStart_toStartOf="@+id/add_label"
+                app:layout_constraintTop_toBottomOf="@+id/add_label" />
+
+            <ImageButton
+                android:id="@+id/my_schedule"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/image_schedule_selected"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_schedule"
+                android:layout_width="44dp"
+                android:layout_height="12dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="schedule"
+                android:textSize="10sp"
+                android:textColor="#FF1493"
+                app:layout_constraintEnd_toEndOf="@+id/my_schedule"
+                app:layout_constraintStart_toStartOf="@+id/my_schedule"
+                app:layout_constraintTop_toBottomOf="@+id/my_schedule" />
+
+            <ImageButton
+                android:id="@+id/add_plan"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/image_add"
+                android:scaleType="centerInside"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/my_schedule"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/text_add"
+                android:layout_width="32dp"
+                android:layout_height="12dp"
+                android:gravity="center"
+                android:text="add"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/add_plan"
+                app:layout_constraintStart_toStartOf="@+id/add_plan"
+                app:layout_constraintTop_toBottomOf="@+id/add_plan" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.appcompat.widget.Toolbar>
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
