--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -34,8 +34,10 @@
         app:layout_constraintTop_toBottomOf="@+id/time" />
 
     <Switch
-        android:layout_width="56dp"
+        android:layout_width="72dp"
         android:layout_height="48dp"
+        android:switchMinWidth="56dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
