--- a/app/src/main/res/layout/cardview_time.xml
+++ b/app/src/main/res/layout/cardview_time.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView2"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -44,10 +44,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerview_time" />
 
-            <EditText
+            <NumberPicker
                 android:id="@+id/edit_time"
-                android:layout_width="200dp"
+                android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:timePickerMode="spinner"
+                android:isScrollContainer="true"
                 app:layout_constraintStart_toEndOf="@+id/text_customize_time"
                 app:layout_constraintTop_toTopOf="@+id/text_customize_time" />
         </androidx.constraintlayout.widget.ConstraintLayout>
